manifests/qycloud/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: qycloud-frontend
  labels:
    app: qycloud-frontend
spec:
  selector:
    app: qycloud-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: qycloud-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: qycloud-frontend
    spec:
      hostAliases:
      # kube-master ip
      - ip: "192.168.0.173"
        hostnames:
          - "www.master.aysaas.com"
          - "static.master.aysaas.com"
          - "fileio.master.aysaas.com"
          - "update.master.aysaas.com"
      imagePullSecrets:
      - name: harbor-registry-secret

      containers:
      - name: nginx
        image: dockerhub.aysaas.com/library/aysaas/nginx:1.13.7-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        volumeMounts:
          - name: saas-nfs
            mountPath: "/opt"
          - name: saas-nfs
            mountPath: "/etc/nginx/conf.d"
            subPath: "data/nginx/sites-enabled"

      - name: php
        image: dockerhub.aysaas.com/library/aysaas/php:7.0-ubuntu-14.04-dev
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9000
        volumeMounts:
          - name: saas-nfs
            mountPath: "/opt"

      volumes:
      - name: saas-nfs
        persistentVolumeClaim:
          claimName: saas-saas
