manifests/qycloud/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret

      containers:
      - name: redis
        image: dockerhub.aysaas.com/library/aysaas/redis:4.0.6-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts:
            - name: saas-nfs
              mountPath: "/data"
              subPath: "data/redis"

      volumes:
      - name: saas-nfs
        persistentVolumeClaim:
          claimName: saas-saas
